--- a/index.html
+++ b/index.html
@@ -81,7 +81,17 @@
           </li>
         </ul>
       </nav>
-      <main></main>
+      <main>
+        <div class="card-container">
+          <div class="card"></div>
+          <div class="card"></div>
+          <div class="card"></div>
+          <div class="card"></div>
+          <div class="card"></div>
+          <div class="card"></div>
+        </div>
+        <div class="information-container"></div>
+      </main>
     </div>
   </body>
 </html>
